Fix: Remove redundant <a> on contact icon in footer causing unwanted screen jump

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -172,6 +172,10 @@ nav .active, .dropdown-item.active, .dropdown-item:active {
     object-fit: cover;
 }
 
+.card-body {
+    overflow: auto;
+}
+
 .card-body h2 {
     margin-top: 20px;
 }
